<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".fragment.UploadFragment">

    <TextView
        android:id="@+id/none1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_mode_of_video"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/none1" >

        <RadioButton
            android:id="@+id/rbPublic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_margin="5dp"
            android:text="@string/mode_public" />

        <RadioButton
            android:id="@+id/rbPrivate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/mode_private" />

    </RadioGroup>

    <Button
        android:id="@+id/btnChooseFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_file"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        tools:hint="Video title (optional)"
        app:layout_constraintBottom_toBottomOf="@+id/none2"
        app:layout_constraintStart_toEndOf="@+id/none2"
        app:layout_constraintTop_toTopOf="@+id/none2" />

    <TextView
        android:id="@+id/none2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/title"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgMode" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
